--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,9 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="donlon.android.sensors">
 
-
-
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -15,6 +12,7 @@
         <activity android:name=".activities.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
+
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
@@ -22,6 +20,12 @@
         </activity>
         <activity android:name=".activities.RecordingActivity">
         </activity>
+
+        <service
+            android:name=".RecordingService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
     </application>
 
 </manifest>
